--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -21,7 +21,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>ZKPay</title>
+    <title>zkpay</title>
     <link
       href="https://fonts.googleapis.com/css?family=Work+Sans&display=swap"
       rel="stylesheet"
