feat: use zksync-checkout

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -162,6 +162,12 @@
   </head>
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
+    <form
+      id="file-picker"
+      style="position: absolute; top: -1000px; left: -1000px"
+    >
+      <input type="file" />
+    </form>
     <div id="loader-container">
       <div id="loader"></div>
     </div>
